<resources>
    <string name="app_name">Paradise</string>
    <string name="splash_logo">Splash logo</string>
    <string name="stay_on_top_of_your_finance_with_us">Stay on top of your finance with us.</string>

    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">We are your new financial Advisor to recommend the best investment for you.</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Create account</string>
    <string name="login">Login</string>
    <string name="create_account">Create account</string>

    <string name="sign_up_description_text">Invest and double your income now.</string>
    <string name="name"> Full name</string>
    <string name="password">Password</string>
    <string name="email">Email address</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>


    <string name="sign_in_description_text">Show your money who’s boss. </string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="notification">Notification</string>
    <string name="invest_now">Invest now</string>
    <string name="your_total_asset_portfolio">Your total Asset Portfolio</string>
    <string name="welcome_anelka">Welcome, Anelka.</string>
    <string name="_203_935">$203,935</string>
    <string name="best_plans">Best Plans</string>
    <string name="see_all">See All</string>
    <string name="see_all_link_arrow">See all link arrow</string>
    <string name="_30_return">30% return</string>
    <string name="gold">Gold</string>
    <string name="investment_guide">Investment Guide</string>
    <string name="basic_type_of_investments">Basic type of investments</string>
    <string name="how_much_can_you_start_wit">How much can you start wit..</string>
    <string name="this_is_how_you_set_your_foot_for_2020_stock_market_recession_what_s_next">This is how you set your foot for 2020 Stock market recession. What’s next...</string>
    <string name="what_do_you_like_to_see_Its_a_very_different_market_from_2018_The_way">What do you like to see? It\'s a very different market from 2018. The way...</string>
    <string name="horizontal_line">Horizontal Line</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="transactions">Transactions</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plan_card_image">Plan card image</string>
    <string name="profile_title">Profile</string>
    <string name="profile_image">Profile image</string>
    <string name="anelka_kweyu">Anelka Kweyu</string>
    <string name="expert">Expert</string>
    <string name="contact_info">Contact Info</string>
    <string name="contact_info_icon_forward">contact info icon Forward</string>
    <string name="source_of_funding_info">Source of Funding Info</string>
    <string name="contact_info_icon">contact info icon</string>
    <string name="settings_icon_forward">settings icon forward</string>
    <string name="settings">Settings</string>
    <string name="settings_icon">settings icon</string>
    <string name="document_info_icon">document info icon</string>
    <string name="document_info">Document Info</string>
    <string name="document_info_icon_forward">document info icon forward</string>
    <string name="bank_account_info_icon">bank account info icon</string>
    <string name="bank_account_info">Bank Account Info</string>
    <string name="bank_account_info_icon_forward">bank account info icon forward</string>
    <string name="contact_info_iconb">contact info iconb</string>
    <string name="profile_image_edit">profile image edit</string>
    <string name="edit_pen_icon">edit pen icon</string>
    <string name="edit_name">Edit name</string>
    <string name="edit_gender">Edit Gender</string>
    <string name="edit_phone_number">Edit Phone Number</string>
    <string name="notification_title">Notification</string>
    <string name="apple_stock_just_increased_check_it_out_now">Apple stock just increased. Check it out now.</string>
    <string name="_15min_ago">15min ago</string>
    <string name="verticle_elipse">verticle elipse</string>
    <string name="bank_of_africa_0102907xxx">Bank of Africa - 0102907xxx</string>
    <string name="_2">+2%</string>
    <string name="current_plans">Current Plans</string>
    <string name="see_all_plans">See All Plans</string>
    <string name="history">History</string>
    <string name="rp_200_000">Rp 200.000</string>
    <string name="rp_150_000">Rp 150.000</string>
    <string name="rp_1_000_240">Rp 1.000.240</string>

    <string name="buy_kocela_stock">Buy Kocela stock</string>
    <string name="sell_kplc_stock">Sell Kplc stock</string>
    <string name="buy_tende_stock">Buy Tende stock</string>
    <string name="sell_bat_stock">Sell Bat stock</string>

    <string name="wed_6_mar_2024">WED 6 Mar 2024</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="sign_up_with_google">Sign_Up_with_Google</string>
    <string name="rate_us">Rate Us</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>

    <string name="open">Open</string>
    <string name="close">Close</string>




</resources>