<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/best_plan_card"
    android:layout_width="146dp"
    android:layout_height="180dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="0dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="20dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginEnd="4dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraintLayoutCard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/platinum_card_bg"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf='@+id/best_plan_card'>

    <ImageView
        android:id="@+id/planSymbol"
        android:layout_width="275dp"
        android:layout_height="226dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bitcoin"
        android:contentDescription="@string/plan_card_image"/>

    <TextView
        android:id="@+id/planName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/sfprodisplaysemibold"
        android:textColor="#ffffff"
        android:text="@string/gold"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/planProfit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/_30_return"
        android:fontFamily="@font/sfprodisplaysemibold"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planName" />
</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>