<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/intro_background"
    tools:context=".activities.IntroActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_contentDescription"
            android:src="@drawable/intro_screen_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:transitionName="logo_image"
            />
        <TextView
            android:id="@+id/intro_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/lets_get_started_text_marginTop"
            android:text="@string/stay_on_top_of_your_finance_with_us"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/lets_get_started_text_size"
            android:fontFamily="@font/dmsans_bold"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:transitionName="auth_title"/>

        <TextView
            android:id="@+id/intro_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/intro_text_marginTop"
            android:layout_marginStart="@dimen/intro_text_marginStartEnd"
            android:layout_marginEnd="@dimen/intro_text_marginStartEnd"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/intro_text_line_spacing_extra"
            android:text="@string/intro_text_description"
            android:fontFamily="@font/sfprodisplaysemibold"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/intro_text_size"
            app:layout_constraintTop_toBottomOf="@+id/intro_title_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:transitionName="auth_text"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_up_intro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/btn_marginStartEnd"
            android:layout_marginTop="@dimen/intro_screen_sign_in_btn_marginTop"
            android:layout_marginEnd="@dimen/btn_marginStartEnd"
            android:background="@drawable/shape_button_rounded"
            android:foreground="?attr/selectableItemBackground"
            android:paddingTop="@dimen/btn_paddingTopBottom"
            android:paddingBottom="@dimen/btn_paddingTopBottom"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/btn_text_size"
            app:layout_constraintTop_toBottomOf="@+id/intro_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:transitionName="sign_in_sign_up"/>

        <TextView
            android:id="@+id/link_sign_in_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/btn_marginStartEnd"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="@dimen/btn_marginStartEnd"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/btn_text_size"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_up_intro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:transitionName="have_don"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>